force-app/zurich-base/main/default/objects/Order/fields/AbandonedCart__c.field-meta.xml
<CustomField>
    <fullName>AbandonedCart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carrito abandonado</label>
    <type>Checkbox</type>
</CustomField>