force-app/zurich-base/main/default/objects/Order/fields/adjustmentReason__c.field-meta.xml
<CustomField>
    <fullName>adjustmentReason__c</fullName>
    <label>Motivo de ajuste</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Switching object ON</fullName>
            </value>
            <value>
                <fullName>Beneficiary change</fullName>
            </value>
            <value>
                <fullName>Change of postal address</fullName>
            </value>
            <value>
                <fullName>Ajuste</fullName>
            </value>
            <value>
                <fullName>Replacement of insured object by ICP</fullName>
            </value>
            <value>
                <fullName>Desactivación</fullName>
            </value>
            <value>
                <fullName>Switching object OFF</fullName>
            </value>
            <value>
                <fullName>Change of insured object</fullName>
            </value>
            <value>
                <fullName>Rescisión</fullName>
            </value>
            <value>
                <fullName>Turning ON/OFF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>