force-app/zurich-base/main/default/objects/Order/fields/After_Processing_Check__c.field-meta.xml
<CustomField>
    <fullName>After_Processing_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Processing Check</label>
    <type>Checkbox</type>
</CustomField>