force-app/zurich-base/main/default/objects/Order/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <label>Bundle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>PACK TELETRABAJO</fullName>
            </value>
            <value>
                <fullName>PACK TECH LOVER</fullName>
            </value>
            <value>
                <fullName>ALTREPROVA</fullName>
            </value>
            <value>
                <fullName>CREAM</fullName>
            </value>
            <value>
                <fullName>PROVA_XG</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>PROVA HELGA</fullName>
            </value>
            <value>
                <fullName>No bundle</fullName>
            </value>
            <value>
                <fullName>PACK MOBILE LOVER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>