force-app/zurich-base/main/default/objects/Order/fields/CampaignParams__c.field-meta.xml
<CustomField>
    <fullName>CampaignParams__c</fullName>
    <label>Parámetros de campaña</label>
    <length>255</length>
    <type>Text</type>
</CustomField>