force-app/zurich-base/main/default/objects/Order/fields/Caseworker__c.field-meta.xml
<CustomField>
    <fullName>Caseworker__c</fullName>
    <inlineHelpText>Used to identify offline policies. If value != Klinc__life or Klinc__gi, the policy will be marked offline</inlineHelpText>
    <label>Caseworker</label>
    <length>80</length>
    <type>Text</type>
</CustomField>