force-app/zurich-base/main/default/objects/Order/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>