force-app/zurich-base/main/default/objects/Order/fields/CustomerNum__c.field-meta.xml
<CustomField>
    <fullName>CustomerNum__c</fullName>
    <label>Customer Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>