force-app/zurich-base/main/default/objects/Order/fields/DigitalSignatureStatusCreateDate__c.field-meta.xml
<CustomField>
    <fullName>DigitalSignatureStatusCreateDate__c</fullName>
    <description>KLINC: Fecha de creación del estado de la firma digital</description>
    <label>Digital Signature Status Create Date</label>
    <type>Date</type>
</CustomField>