force-app/zurich-base/main/default/objects/Order/fields/DigitalSignatureStatusUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>DigitalSignatureStatusUpdateDate__c</fullName>
    <description>KLINC: Fecha de actualización del estado de la firma digital</description>
    <label>Digital Signature Status Update Date</label>
    <type>Date</type>
</CustomField>