force-app/zurich-base/main/default/objects/Order/fields/Excess__c.field-meta.xml
<CustomField>
    <fullName>Excess__c</fullName>
    <label>Franquicia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>tbd</fullName>
            </value>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>1%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>