force-app/zurich-base/main/default/objects/Order/fields/ExcessAmount__c.field-meta.xml
<CustomField>
    <fullName>ExcessAmount__c</fullName>
    <description>Deductible Amount in IBA EMEA.</description>
    <label>Excess - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>