force-app/zurich-base/main/default/objects/Order/fields/FractionedPremium__c.field-meta.xml
<CustomField>
    <fullName>FractionedPremium__c</fullName>
    <label>Prima fraccionada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>