force-app/zurich-base/main/default/objects/Order/fields/GoogleCID__c.field-meta.xml
<CustomField>
    <fullName>GoogleCID__c</fullName>
    <label>Google CID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>