force-app/zurich-base/main/default/objects/Order/fields/InsuranceType__c.field-meta.xml
<CustomField>
    <fullName>InsuranceType__c</fullName>
    <label>Tipo de seguro</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mi familia</fullName>
            </value>
            <value>
                <fullName>Mi Hipoteca</fullName>
            </value>
            <value>
                <fullName>Escoger...</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>