force-app/zurich-base/main/default/objects/Order/fields/InsuredObjectName__c.field-meta.xml
<CustomField>
    <fullName>InsuredObjectName__c</fullName>
    <description>KLINC:  Indica el nombre del dispositivo asegurado de GI o el nombre del bundle si hay más de un dispositivo asegurado.</description>
    <label>Insured object name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>