force-app/zurich-base/main/default/objects/Order/fields/jobtype__c.field-meta.xml
<CustomField>
    <fullName>jobtype__c</fullName>
    <label>Tipo de trabajo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Propia</fullName>
            </value>
            <value>
                <fullName>Ajena</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>