force-app/zurich-base/main/default/objects/Order/fields/LoanPeriod__c.field-meta.xml
<CustomField>
    <fullName>LoanPeriod__c</fullName>
    <label>Periodo restante del préstamo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>