force-app/zurich-base/main/default/objects/Order/fields/LoanProvider__c.field-meta.xml
<CustomField>
    <fullName>LoanProvider__c</fullName>
    <label>Entidad emisora del préstamo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>CAJAMAR CAJA RURAL, SOCIEDAD COOPERATIVA DE CRÉDITO</fullName>
            </value>
            <value>
                <fullName>BANCA MARCH, S.A.</fullName>
            </value>
            <value>
                <fullName>BANCO SANTANDER, S.A.</fullName>
            </value>
            <value>
                <fullName>BANKINTER, S.A.</fullName>
            </value>
            <value>
                <fullName>BANCA PUEYO, S.A</fullName>
            </value>
            <value>
                <fullName>UNICAJA BANCO, S.A.</fullName>
            </value>
            <value>
                <fullName>CAIXABANK, S.A.</fullName>
            </value>
            <value>
                <fullName>ANDBANK ESPAÑA S.A.U.</fullName>
            </value>
            <value>
                <fullName>LIBERBANK, S.A</fullName>
            </value>
            <value>
                <fullName>CAJA LABORAL POPULAR COOP. DE CRÉDITO</fullName>
            </value>
            <value>
                <fullName>CAJA RURAL GRANADA, Sociedad Cooperativa de Crédito</fullName>
            </value>
            <value>
                <fullName>OPEN BANK, S.A.</fullName>
            </value>
            <value>
                <fullName>KUTXABANK, S.A.</fullName>
            </value>
            <value>
                <fullName>DEUTSCHE BANK, SOCIEDAD ANÓNIMA ESPAÑOLA</fullName>
            </value>
            <value>
                <fullName>BBVA, S.A.</fullName>
            </value>
            <value>
                <fullName>BANCO DE SABADELL, S.A.</fullName>
            </value>
            <value>
                <fullName>ABANCA Corporación Bancaria, S.A.</fullName>
            </value>
            <value>
                <fullName>BANKIA, S.A.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>