force-app/zurich-base/main/default/objects/Order/fields/LoanType__c.field-meta.xml
<CustomField>
    <fullName>LoanType__c</fullName>
    <label>Tipo de préstamo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Hipoteca</fullName>
            </value>
            <value>
                <fullName>Préstamo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>