force-app/zurich-base/main/default/objects/Order/fields/Masterpolicy__c.field-meta.xml
<CustomField>
    <fullName>Masterpolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Masterpolicy</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Polizas</relationshipLabel>
    <relationshipName>Polizas</relationshipName>
    <type>Lookup</type>
</CustomField>