force-app/zurich-base/main/default/objects/Order/fields/MasterPolicyDescr__c.field-meta.xml
<CustomField>
    <fullName>MasterPolicyDescr__c</fullName>
    <label>Masterpolicy description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>