force-app/zurich-base/main/default/objects/Order/fields/Modality__c.field-meta.xml
<CustomField>
    <fullName>Modality__c</fullName>
    <label>Modalidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Estándar</fullName>
            </value>
            <value>
                <fullName>On Demand</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>