force-app/zurich-base/main/default/objects/Order/fields/MultiproductOption__c.field-meta.xml
<CustomField>
    <fullName>MultiproductOption__c</fullName>
    <description>KLINC: Indica el tipo de multiproducto escogido</description>
    <label>Multiproduct Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PREMIUM OWN MOBILITY BICICLETA ELECTRICA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>