force-app/zurich-base/main/default/objects/Order/fields/ObjectPicture__c.field-meta.xml
<CustomField>
    <fullName>ObjectPicture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KLINC: Indica si contiene foto del objeto asegurado</description>
    <label>Object Picture</label>
    <type>Checkbox</type>
</CustomField>