force-app/zurich-base/main/default/objects/Order/fields/ObjectReceipt__c.field-meta.xml
<CustomField>
    <fullName>ObjectReceipt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KLINC: Indica si contiene recibo del objeto asegurado</description>
    <label>Object Receipt</label>
    <type>Checkbox</type>
</CustomField>