force-app/zurich-base/main/default/objects/Order/fields/PadlockPicture__c.field-meta.xml
<CustomField>
    <fullName>PadlockPicture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KLINC: Indica si contiene foto del candado</description>
    <label>Padlock Picture</label>
    <type>Checkbox</type>
</CustomField>