force-app/zurich-base/main/default/objects/Order/fields/PadlockReceipt__c.field-meta.xml
<CustomField>
    <fullName>PadlockReceipt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KLINC: Indica si contiene recibo del candado</description>
    <label>Padlock Receipt</label>
    <type>Checkbox</type>
</CustomField>