force-app/zurich-base/main/default/objects/Order/fields/PendingPaymets__c.field-meta.xml
<CustomField>
    <fullName>PendingPaymets__c</fullName>
    <label>Cantidad pagos pendientes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>