force-app/zurich-base/main/default/objects/Order/fields/PolicyContractSerial__c.field-meta.xml
<CustomField>
    <fullName>PolicyContractSerial__c</fullName>
    <label>Versión de póliza</label>
    <length>80</length>
    <type>Text</type>
</CustomField>