force-app/zurich-base/main/default/objects/Order/fields/PolicyContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>PolicyContractStartDate__c</fullName>
    <label>Fecha inicio versión póliza</label>
    <type>Date</type>
</CustomField>