force-app/zurich-base/main/default/objects/Order/fields/PolicyNum__c.field-meta.xml
<CustomField>
    <fullName>PolicyNum__c</fullName>
    <externalId>true</externalId>
    <label>Número de la póliza</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>