force-app/zurich-base/main/default/objects/Order/fields/PolicyStatus__c.field-meta.xml
<CustomField>
    <fullName>PolicyStatus__c</fullName>
    <label>Estado de Póliza</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inactivo</fullName>
            </value>
            <value>
                <fullName>Activo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>