force-app/zurich-base/main/default/objects/Order/fields/Processing_Journey__c.field-meta.xml
<CustomField>
    <fullName>Processing_Journey__c</fullName>
    <description>Value filled in Marketing Cloud in order to know in which journey entered the order, used to avoid reentering again.</description>
    <label>Processing Journey</label>
    <length>80</length>
    <type>Text</type>
</CustomField>