force-app/zurich-base/main/default/objects/Order/fields/Processing_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Processing_Timestamp__c</fullName>
    <label>Processing Timestamp</label>
    <type>DateTime</type>
</CustomField>