force-app/zurich-base/main/default/objects/Order/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <label>Nombre de producto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>