force-app/zurich-base/main/default/objects/Order/fields/QbLastPage__c.field-meta.xml
<CustomField>
    <fullName>QbLastPage__c</fullName>
    <label>Página Q&amp;B</label>
    <length>80</length>
    <type>Text</type>
</CustomField>