force-app/zurich-base/main/default/objects/Order/fields/QuoteEntry__c.field-meta.xml
<CustomField>
    <fullName>QuoteEntry__c</fullName>
    <externalId>true</externalId>
    <label>Quote entry</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>