force-app/zurich-base/main/default/objects/Order/fields/QuoteStatus__c.field-meta.xml
<CustomField>
    <fullName>QuoteStatus__c</fullName>
    <label>Estado quote</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>