force-app/zurich-base/main/default/objects/Order/fields/receiveMarketing__c.field-meta.xml
<CustomField>
    <fullName>receiveMarketing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>KLINC: customer&apos;s consent to receive communications</description>
    <label>Recibir marketing</label>
    <type>Checkbox</type>
</CustomField>