force-app/zurich-base/main/default/objects/Order/fields/RelatedAgent__c.field-meta.xml
<CustomField>
    <fullName>RelatedAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>KLINC:  Indica el agente al que se le ha atribuido la póliza</description>
    <label>Related agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>