force-app/zurich-base/main/default/objects/Order/fields/SellChannel__c.field-meta.xml
<CustomField>
    <fullName>SellChannel__c</fullName>
    <label>Canal de venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Contact center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>