force-app/zurich-base/main/default/objects/Order/fields/signatureStatus__c.field-meta.xml
<CustomField>
    <fullName>signatureStatus__c</fullName>
    <label>Estado de la firma</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SIGNED</fullName>
            </value>
            <value>
                <fullName>Not signed</fullName>
            </value>
            <value>
                <fullName>In progress or Signed and pending to be generated</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>