force-app/zurich-base/main/default/objects/Order/fields/SourceCountry__c.field-meta.xml
<CustomField>
    <fullName>SourceCountry__c</fullName>
    <label>Source Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>