force-app/zurich-base/main/default/objects/Order/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <length>80</length>
    <type>Text</type>
</CustomField>