force-app/zurich-base/main/default/objects/Order/fields/SumInsured__c.field-meta.xml
<CustomField>
    <fullName>SumInsured__c</fullName>
    <description>Klinc. Suma asegurada para Xiaomi Multidevice</description>
    <label>Sum Insured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>