force-app/zurich-base/main/default/objects/Order/fields/TotalPremium__c.field-meta.xml
<CustomField>
    <fullName>TotalPremium__c</fullName>
    <label>Prima total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>