force-app/zurich-base/main/default/objects/Order/fields/TransportType__c.field-meta.xml
<CustomField>
    <fullName>TransportType__c</fullName>
    <description>KLINC: Indica el producto de movilidad escogido</description>
    <label>Transport Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SEGWAY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>