force-app/zurich-base/main/default/objects/Order/fields/UpdateReason__c.field-meta.xml
<CustomField>
    <fullName>UpdateReason__c</fullName>
    <label>Motivo de actualización</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>tbd</fullName>
            </value>
            <value>
                <fullName>Policy cancelation (including lapse and regret)</fullName>
            </value>
            <value>
                <fullName>Policy activation</fullName>
            </value>
            <value>
                <fullName>Policy MTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>