force-app/zurich-base/main/default/objects/Order/recordTypes/PolicyGI.recordType-meta.xml
<RecordType>
    <fullName>PolicyGI</fullName>
    <active>true</active>
    <label>Póliza GI</label>
</RecordType>