force-app/zurich-base/main/default/objects/Order/recordTypes/PolicyLife.recordType-meta.xml
<RecordType>
    <fullName>PolicyLife</fullName>
    <active>true</active>
    <label>Póliza vida</label>
</RecordType>