force-app/zurich-base/main/default/objects/Order/recordTypes/QuoteGI.recordType-meta.xml
<RecordType>
    <fullName>QuoteGI</fullName>
    <active>true</active>
    <label>Quote GI</label>
</RecordType>