force-app/zurich-base/main/default/objects/Order/recordTypes/QuoteLife.recordType-meta.xml
<RecordType>
    <fullName>QuoteLife</fullName>
    <active>true</active>
    <label>Quote vida</label>
</RecordType>