force-app/zurich-base/main/default/objects/Order/validationRules/Convert_Lead_to_Policy.validationRule-meta.xml
<ValidationRule>
    <fullName>Convert_Lead_to_Policy</fullName>
    <active>true</active>
    <description>Check that the recordtype is changed from Lead to Policy when the field PolicyNum is filled.</description>
    <errorConditionFormula>AND(
not ISBLANK(PolicyNum__c),
OR(
$RecordType.DeveloperName = &apos;QuoteGI&apos;, $RecordType.DeveloperName = &apos;QuoteLife&apos;)
)</errorConditionFormula>
    <errorDisplayField>PolicyNum__c</errorDisplayField>
    <errorMessage>The field Policy Number can not be filled if the recordtype is not changed to Policy type.</errorMessage>
</ValidationRule>