force-app/zurich-base/main/default/objects/Order/listViews/EMEA_France_Policies.listView-meta.xml
<ListView>
    <fullName>EMEA_France_Policies</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PolicyNum__c</field>
        <operation>notEqual</operation>
        <value>null</value>
    </filters>
    <filters>
        <field>SourceCountry__c</field>
        <operation>equals</operation>
        <value>France</value>
    </filters>
    <label>EMEA France Policies</label>
</ListView>