force-app/zurich-base/main/default/objects/Order/listViews/EMEA_France_Quotes.listView-meta.xml
<ListView>
    <fullName>EMEA_France_Quotes</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.QuoteGI,Order.QuoteLife</value>
    </filters>
    <filters>
        <field>SourceCountry__c</field>
        <operation>equals</operation>
        <value>France</value>
    </filters>
    <label>EMEA France Quotes</label>
</ListView>