force-app/zurich-base/main/default/objects/Order/listViews/EMEA_Germany_Quotes.listView-meta.xml
<ListView>
    <fullName>EMEA_Germany_Quotes</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.QuoteGI</value>
    </filters>
    <filters>
        <field>SourceCountry__c</field>
        <operation>equals</operation>
        <value>Germany</value>
    </filters>
    <label>EMEA Germany Quotes</label>
</ListView>