force-app/zurich-base/main/default/objects/Order/listViews/Orange_Policies.listView-meta.xml
<ListView>
    <fullName>Orange_Policies</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.PolicyLife</value>
    </filters>
    <filters>
        <field>Partner__c</field>
        <operation>equals</operation>
        <value>Orange Seguros</value>
    </filters>
    <label>Orange_Policies</label>
</ListView>