force-app/zurich-base/main/default/objects/Order/listViews/Orange_Quotes.listView-meta.xml
<ListView>
    <fullName>Orange_Quotes</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner__c</field>
        <operation>equals</operation>
        <value>Orange Seguros</value>
    </filters>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.QuoteLife</value>
    </filters>
    <label>Orange Life Quotes</label>
</ListView>