force-app/zurich-base/main/default/objects/Order/listViews/Polizas.listView-meta.xml
<ListView>
    <fullName>Polizas</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Tipo_de_registro__c</columns>
    <columns>PolicyNum__c</columns>
    <columns>ContactId__c</columns>
    <columns>PolicyStatus__c</columns>
    <columns>signatureStatus__c</columns>
    <columns>TotalPremium__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.PolicyGI</value>
    </filters>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.PolicyLife</value>
    </filters>
    <label>Polizas</label>
</ListView>