force-app/zurich-base/main/default/objects/Order/listViews/Quotes.listView-meta.xml
<ListView>
    <fullName>Quotes</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Tipo_de_registro__c</columns>
    <columns>QuoteEntry__c</columns>
    <columns>ContactId__c</columns>
    <columns>TotalPremium__c</columns>
    <columns>QbLastPage__c</columns>
    <columns>Channel__c</columns>
    <columns>Step__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <columns>AbandonedCart__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.QuoteGI</value>
    </filters>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.QuoteLife</value>
    </filters>
    <label>Quotes</label>
</ListView>